Refactor for module federation done

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="theme-color" content="#000000"/>
     <meta name="Description" content="Login" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <script src="http://webpack-component-library.s3-website-eu-west-1.amazonaws.com/remoteEntry.js"></script>
     <title>Bank Account</title>
 </head>
 
